# Deep-Reinforcement-Learning-agent-for-Construction-Project-Execution

./: .gitignore  .gitmodules  A3C.ipynb  Hello.txt  MILP.py  README.md  deep_q_learning.ipynb  main.py  requirements.txt  stable_baseline.ipynb  target_loader.py  test.py
GridWorld-env/: setup.py
GridWorld-env/GridWorld_env/: __init__.py
GridWorld-env/GridWorld_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GridWorld-env/GridWorld_env/envs/: grid_world.py  grid_world_beam.py  grid_world_flin.py  grid_world_old.py  scafoldEnvTest.py  scafold_grid_world.py  scafold_grid_world_new.py  scafold_grid_world_old.py  target_loader.py  test.py
GridWorld-env/GridWorld_env/envs/targets/: 4x4_target1  4x4_target2
MILP/: MILP.py
MILP/Input/: instance_1.txt  instance_2.txt  instance_3.txt  instance_4.txt  instance_5.txt  instance_6.txt  toy.txt
ScaffoldGridWorld-env/: setup.py
ScaffoldGridWorld-env/ScaffoldGridWorld_env/: __init__.py
ScaffoldGridWorld-env/ScaffoldGridWorld_env.egg-info/: PKG-INFO  SOURCES.txt
ScaffoldGridWorld-env/ScaffoldGridWorld_env/envs/: __init__.py  grid_world.py  target_loader.py
SharedGridWorld/: setup.py
SharedGridWorld/SharedGridWorld_env/: __init__.py
SharedGridWorld/SharedGridWorld_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SharedGridWorld/SharedGridWorld_env/envs/: __init__.py  shared_grid_world.py
benchmarks/: A2C.ipynb  A2C.py  A2C_Optuna.py  A2C_noisyNet.py  Double_DQN.ipynb  N_step_DQN.ipynb  NoisyNet.py  Prioritised_Buffer_DoubleDuelingDQN.ipynb  RUN_A2C.ipynb  RUN_TRAINED_AGENT.ipynb  SCAFFOLD_DQN_ATTEMPT.ipynb  SCAFFOLD_DQN_ATTEMPT.py  Vanilla_DQN.ipynb  replay_buffer.py  scrapeSequence.py
benchmarks/Nstep/N3/: episodeDurationNstep=3(1).npy  rewardPlotNstep=3.npy
benchmarks/Nstep/N3/vanilla_dqn_target/: data.pkl
benchmarks/targets/: 4x4_target0  4x4_target2  6x6
benchmarks/test_targets/: 4x4_target4
benchmarks_scaffold/: Double_DQN.ipynb  NoisyNet.ipynb  RUN_TRAINED_AGENT_TRON.ipynb  SCAFFOLD_DQN_ATTEMPT.ipynb  SCAFFOLD_DQN_ATTEMPT.py  target_loader.py
benchmarks_scaffold/test_targets/: 4x4_target3
dqn_models/singleAgent_oneTarget/DoubleDuelingDQN_Crelu_PrioritisedBuffer/: double_dueling_dqn_crely_Pbuffer.txt
dqn_models/vanilla/: duration_plot.npy  reward_plot.npy
gym-examples/: main.py
gym-examples/gym_examples/: __init__.py
raylib-demo/: CMakeLists.txt
raylib-demo/src/: main.cpp
targets/: 4cols4beams  4x4_target0  4x4_target1  4x4_target2  a  p4.pddl  p5.pddl  target0  target1  target2  target3
test_targets/: 4x4_target3  4x4_target4
visualization/: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
visualization/src/: GridWorld.cpp  GridWorld.h  IAgentStep.h  IEnvStep.h  main.cpp
(+19 files in other folders)
